# OpenShadows

./: .gitignore  Testing_vedo.ipynb  Testing_vedo.py  Tests.ipynb  Tests.py  pyproject.toml
src/openshadows/: Environment_3D.py  OpenShadows.py  Polygon_3D.py  __init__.py
